<resources>
    <string name="app_name">Notes</string>
    <string name="day_of_week">Day of week:</string>
    <string name="note_title">Note title</string>
    <string name="note_description">Note description</string>
    <string name="add_note">Add Note</string>
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>
    <string-array name="spinner_day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
